--- a/ruby/app/Gemfile
+++ b/ruby/app/Gemfile
@@ -1,7 +1,9 @@
 source "https://rubygems.org"
 
-gem "sinatra", "~>3.1"
+gem "sinatra", "~>4.2"
 gem "thin"
+gem "puma"
+gem "rackup"
 
 group :test do
   gem "rack-test"
